tests/NormalTests/paczka1/fuzzy1/89181430.err
Error in line 1: A548 S934 37,5
Error in line 8: A548 A64 129,7
Error in line 10: A548 S571 76,1
Error in line 27: Prsj85W3 A548 126,89
Error in line 2: 4OU A548 83,4
Error in line 34: A548 A64 80,4
